--- a/LearnC.vcxproj.filters
+++ b/LearnC.vcxproj.filters
@@ -26,7 +26,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="add.h">
+    <ClInclude Include="mymath.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
