--- a/LearnC.vcxproj
+++ b/LearnC.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="add.c" />
+    <ClCompile Include="mymath.c" />
     <ClCompile Include="LearnC.cpp" />
     <ClCompile Include="Test.c" />
   </ItemGroup>
